--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,15 @@
 services:
-  postgres:
-    image: postgres:16
-    container_name: postgres
-    restart: always
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: keycloak
-    volumes:
-      - ./data/postgres:/var/lib/postgresql/data
-    networks:
-      - keycloak-network
-
   keycloak:
     image: quay.io/keycloak/keycloak:26.0.0
     container_name: keycloak
     restart: always
     environment:
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: keycloak
+      KC_DB_URL: jdbc:postgresql://<HOST>:<PUERTO>/<NOMBRE_DB>
+      KC_DB_USERNAME: <USUARIO_DB>
+      KC_DB_PASSWORD: <CONTRASEÑA_DB>
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_BOOTSTRAP_ADMIN_PASSWORD: admin
-    command: ["start-dev"]
+    command: ["start-dev", "--hostname-strict=false"]
     ports:
       - "8080:8080"
-    depends_on:
-      - postgres
-    volumes:
-      - ./data/keycloak:/opt/keycloak/data
-    networks:
-      - keycloak-network
-
-networks:
-  keycloak-network:
-    driver: bridge
