--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
+version: '3.8'
+
 services:
   keycloak:
-    image: quay.io/keycloak/keycloak:26.0.0
+    build: .
     container_name: keycloak
     restart: always
     environment:
@@ -10,6 +12,5 @@ services:
       KC_DB_PASSWORD: <CONTRASEÑA_DB>
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
       KC_BOOTSTRAP_ADMIN_PASSWORD: admin
-    command: ["start-dev", "--hostname-strict=false"]
     ports:
       - "8080:8080"
